--- a/src/component/Navbar.css
+++ b/src/component/Navbar.css
@@ -1,4 +1,4 @@
-
+/* 네비게이션 바 */
 
 .navbar {
     background-color: #1e88e5;
@@ -7,4 +7,25 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.navbar .logo {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.navbar .menu a,
+.navbar .menu button {
+    text-decoration: none;
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 14px;
+    color: white;
+    margin-left: 16px;
+}
+
+.navbar .menu a:hover,
+.navbar .menu button:hover {
+    text-decoration: underline;
 }
